--- a/src/App.css
+++ b/src/App.css
@@ -229,7 +229,6 @@
     padding: 20px 20px;
     align-items: center;
 }
-
 .add-interview-popup-container{
     /* z-index: 999; */
     flex-direction: column;
@@ -267,6 +266,22 @@
     border: none;
     outline: none;
     box-shadow: 0px 0px 4px rgba(95, 95, 95, 0.25);
+}
+
+.form-input-date{
+    width: 100%;
+    height: 40px;
+    margin: 0px 0px 15px 0px;
+    padding-left: 2%;
+    background: #FFFFFF;
+    border-radius: 5px;
+    border: none;
+    outline: none;
+    box-shadow: 0px 0px 4px rgba(95, 95, 95, 0.25);
+}
+
+.react-date-picker__wrapper {
+    border: none !important;
 }
 
 .form-input-container{
